Peer review revisions, mostly processing one field visit identifier at a time